// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component FileUploadRowStatus should render circular progress if upload is in progress 1`] = `
<Fragment>
  <WithStyles(CircularProgress)
    size={20}
    thickness={4}
    value={50}
    variant="determinate"
  />
  <WithStyles(Typography)
    aria-label="50%"
    variant="caption"
  >
    50%
  </WithStyles(Typography)>
</Fragment>
`;

exports[`Component FileUploadRowStatus should render default view 1`] = `
<Fragment>
  <WithStyles(Tooltip)
    title="Remove this file"
  >
    <WithStyles(IconButton)
      onClick={[MockFunction]}
    >
      <pure(DeleteIcon) />
    </WithStyles(IconButton)>
  </WithStyles(Tooltip)>
</Fragment>
`;

exports[`Component FileUploadRowStatus should render disabled view 1`] = `
<Fragment>
  <WithStyles(Tooltip)
    title="Remove this file"
  >
    <WithStyles(IconButton)
      disabled={true}
      onClick={[MockFunction]}
    >
      <pure(DeleteIcon) />
    </WithStyles(IconButton)>
  </WithStyles(Tooltip)>
</Fragment>
`;

exports[`Component FileUploadRowStatus should render done icon if upload is finished 1`] = `
<Fragment>
  <WithStyles(IconButton)>
    <pure(DoneIcon) />
  </WithStyles(IconButton)>
</Fragment>
`;

exports[`Component FileUploadRowStatus should render for edge browser if file is being uploaded but no progress data 1`] = `
<Fragment>
  <WithStyles(CircularProgress)
    size={20}
    thickness={4}
  />
  <WithStyles(Typography)
    aria-label="Uploading..."
    variant="caption"
  >
    Uploading...
  </WithStyles(Typography)>
</Fragment>
`;

exports[`Component FileUploadRowStatus should render if file uploaded successfully but later other file failed 1`] = `
<Fragment>
  <WithStyles(Tooltip)
    title="Remove this file"
  >
    <WithStyles(IconButton)
      onClick={[MockFunction]}
    >
      <pure(DeleteIcon) />
    </WithStyles(IconButton)>
  </WithStyles(Tooltip)>
</Fragment>
`;
